--- a/deploy/base-csv/das-operator.clusterserviceversion.yaml
+++ b/deploy/base-csv/das-operator.clusterserviceversion.yaml
@@ -15,6 +15,7 @@ metadata:
     features.operators.openshift.io/token-auth-aws: "false"
     features.operators.openshift.io/token-auth-azure: "false"
     features.operators.openshift.io/token-auth-gcp: "false"
+    operatorframework.io/suggested-namespace: das-operator
     operators.openshift.io/valid-subscription: '["OpenShift Kubernetes Engine", "OpenShift Container Platform", "OpenShift Platform Plus"]'
     capabilities: Basic Install
     categories: Drivers and plugins
