--- a/samples/test-statefulset.yaml
+++ b/samples/test-statefulset.yaml
@@ -16,7 +16,7 @@ spec:
       restartPolicy: Always
       containers:
       - name: cuda-vectoradd-1
-        image: nvcr.io/nvidia/k8s/cuda-sample:vectoradd-cuda12.5.0-ubi8
+        image: quay.io/dasoperator/cuda-sample:vectoradd-cuda12.5.0-ubi
         resources:
           limits:
             nvidia.com/mig-1g.5gb: 1
