--- a/test/test-deployment.yaml
+++ b/test/test-deployment.yaml
@@ -15,7 +15,7 @@ spec:
       restartPolicy: Always
       containers:
       - name: cuda-vectoradd
-        image: nvcr.io/nvidia/k8s/cuda-sample:vectoradd-cuda12.5.0-ubi8
+        image: quay.io/dasoperator/cuda-sample:vectoradd-cuda12.5.0-ubi
         resources:
           limits:
             nvidia.com/mig-1g.5gb: "1"
