--- a/test/test-pod.yaml
+++ b/test/test-pod.yaml
@@ -6,7 +6,7 @@ spec:
   restartPolicy: OnFailure
   containers:
   - name: cuda-vectoradd-1
-    image: "nvcr.io/nvidia/k8s/cuda-sample:vectoradd-cuda12.5.0-ubi8" # requires real GPUs
+    image: "quay.io/dasoperator/cuda-sample:vectoradd-cuda12.5.0-ubi" # requires real GPUs
     resources:
       limits:
         nvidia.com/mig-1g.5gb: "1"
