add default group for events create/patch (#867)

--- a/bundle-ocp/manifests/das-operator.clusterserviceversion.yaml
+++ b/bundle-ocp/manifests/das-operator.clusterserviceversion.yaml
@@ -275,6 +275,13 @@ spec:
           verbs:
           - create
         - apiGroups:
+          - ""
+          resources:
+          - events
+          verbs:
+          - create
+          - patch
+        - apiGroups:
           - policy
           resources:
           - poddisruptionbudgets
