--- a/deploy/02_operator_rbac.yaml
+++ b/deploy/02_operator_rbac.yaml
@@ -168,6 +168,13 @@ rules:
     verbs:
     - create
   - apiGroups:
+    - ""
+    resources:
+    - events
+    verbs:
+    - create
+    - patch
+  - apiGroups:
     - policy
     resources:
     - poddisruptionbudgets
