--- a/bindata/assets/instaslice-operator/scheduler-authentication-reader_rbac.authorization.clusterrolebinding.yaml
+++ b/bindata/assets/instaslice-operator/scheduler-authentication-reader_rbac.authorization.clusterrolebinding.yaml
@@ -1,8 +1,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  creationTimestamp: null
   name: das-scheduler-authentication-reader
+  namespace: das-operator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
