--- a/bindata/assets/instaslice-operator/scheduler_rbac.role.yaml
+++ b/bindata/assets/instaslice-operator/scheduler_rbac.role.yaml
@@ -1,8 +1,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  creationTimestamp: null
   name: das-scheduler
+  namespace: das-operator
 rules:
 - apiGroups:
   - ""
@@ -24,3 +24,10 @@ rules:
   - update
   - patch
   - delete
+- apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - patch
