--- a/bindata/assets/instaslice-operator/scheduler_rbac.rolebinding.yaml
+++ b/bindata/assets/instaslice-operator/scheduler_rbac.rolebinding.yaml
@@ -1,8 +1,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  creationTimestamp: null
   name: das-scheduler
+  namespace: das-operator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
